--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,9 @@ dataclasses = {version = ">=0.6", markers="python_version >= '3.6' and python_ve
 acryl-datahub = {version = "^0.8.16", optional = true}
 great-expectations = {version = "^0.13.42", optional = true}
 pydantic = "^1.8.2"
-greenlet = "^2.0.1"
+greenlet = "^3.0.1"
 sqlalchemy-utils = "^0.38.3"
+ijson = "^3.2.3"
 
 [tool.poetry.extras]
 datahub = ["acryl-datahub", "great-expectations"]
